--- a/knn.ipynb
+++ b/knn.ipynb
@@ -2,18 +2,164 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([0, 1, 2])"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5.1 3.5 1.4 0.2]\n",
+      " [4.9 3.  1.4 0.2]\n",
+      " [4.7 3.2 1.3 0.2]\n",
+      " [4.6 3.1 1.5 0.2]\n",
+      " [5.  3.6 1.4 0.2]\n",
+      " [5.4 3.9 1.7 0.4]\n",
+      " [4.6 3.4 1.4 0.3]\n",
+      " [5.  3.4 1.5 0.2]\n",
+      " [4.4 2.9 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.1]\n",
+      " [5.4 3.7 1.5 0.2]\n",
+      " [4.8 3.4 1.6 0.2]\n",
+      " [4.8 3.  1.4 0.1]\n",
+      " [4.3 3.  1.1 0.1]\n",
+      " [5.8 4.  1.2 0.2]\n",
+      " [5.7 4.4 1.5 0.4]\n",
+      " [5.4 3.9 1.3 0.4]\n",
+      " [5.1 3.5 1.4 0.3]\n",
+      " [5.7 3.8 1.7 0.3]\n",
+      " [5.1 3.8 1.5 0.3]\n",
+      " [5.4 3.4 1.7 0.2]\n",
+      " [5.1 3.7 1.5 0.4]\n",
+      " [4.6 3.6 1.  0.2]\n",
+      " [5.1 3.3 1.7 0.5]\n",
+      " [4.8 3.4 1.9 0.2]\n",
+      " [5.  3.  1.6 0.2]\n",
+      " [5.  3.4 1.6 0.4]\n",
+      " [5.2 3.5 1.5 0.2]\n",
+      " [5.2 3.4 1.4 0.2]\n",
+      " [4.7 3.2 1.6 0.2]\n",
+      " [4.8 3.1 1.6 0.2]\n",
+      " [5.4 3.4 1.5 0.4]\n",
+      " [5.2 4.1 1.5 0.1]\n",
+      " [5.5 4.2 1.4 0.2]\n",
+      " [4.9 3.1 1.5 0.2]\n",
+      " [5.  3.2 1.2 0.2]\n",
+      " [5.5 3.5 1.3 0.2]\n",
+      " [4.9 3.6 1.4 0.1]\n",
+      " [4.4 3.  1.3 0.2]\n",
+      " [5.1 3.4 1.5 0.2]\n",
+      " [5.  3.5 1.3 0.3]\n",
+      " [4.5 2.3 1.3 0.3]\n",
+      " [4.4 3.2 1.3 0.2]\n",
+      " [5.  3.5 1.6 0.6]\n",
+      " [5.1 3.8 1.9 0.4]\n",
+      " [4.8 3.  1.4 0.3]\n",
+      " [5.1 3.8 1.6 0.2]\n",
+      " [4.6 3.2 1.4 0.2]\n",
+      " [5.3 3.7 1.5 0.2]\n",
+      " [5.  3.3 1.4 0.2]\n",
+      " [7.  3.2 4.7 1.4]\n",
+      " [6.4 3.2 4.5 1.5]\n",
+      " [6.9 3.1 4.9 1.5]\n",
+      " [5.5 2.3 4.  1.3]\n",
+      " [6.5 2.8 4.6 1.5]\n",
+      " [5.7 2.8 4.5 1.3]\n",
+      " [6.3 3.3 4.7 1.6]\n",
+      " [4.9 2.4 3.3 1. ]\n",
+      " [6.6 2.9 4.6 1.3]\n",
+      " [5.2 2.7 3.9 1.4]\n",
+      " [5.  2.  3.5 1. ]\n",
+      " [5.9 3.  4.2 1.5]\n",
+      " [6.  2.2 4.  1. ]\n",
+      " [6.1 2.9 4.7 1.4]\n",
+      " [5.6 2.9 3.6 1.3]\n",
+      " [6.7 3.1 4.4 1.4]\n",
+      " [5.6 3.  4.5 1.5]\n",
+      " [5.8 2.7 4.1 1. ]\n",
+      " [6.2 2.2 4.5 1.5]\n",
+      " [5.6 2.5 3.9 1.1]\n",
+      " [5.9 3.2 4.8 1.8]\n",
+      " [6.1 2.8 4.  1.3]\n",
+      " [6.3 2.5 4.9 1.5]\n",
+      " [6.1 2.8 4.7 1.2]\n",
+      " [6.4 2.9 4.3 1.3]\n",
+      " [6.6 3.  4.4 1.4]\n",
+      " [6.8 2.8 4.8 1.4]\n",
+      " [6.7 3.  5.  1.7]\n",
+      " [6.  2.9 4.5 1.5]\n",
+      " [5.7 2.6 3.5 1. ]\n",
+      " [5.5 2.4 3.8 1.1]\n",
+      " [5.5 2.4 3.7 1. ]\n",
+      " [5.8 2.7 3.9 1.2]\n",
+      " [6.  2.7 5.1 1.6]\n",
+      " [5.4 3.  4.5 1.5]\n",
+      " [6.  3.4 4.5 1.6]\n",
+      " [6.7 3.1 4.7 1.5]\n",
+      " [6.3 2.3 4.4 1.3]\n",
+      " [5.6 3.  4.1 1.3]\n",
+      " [5.5 2.5 4.  1.3]\n",
+      " [5.5 2.6 4.4 1.2]\n",
+      " [6.1 3.  4.6 1.4]\n",
+      " [5.8 2.6 4.  1.2]\n",
+      " [5.  2.3 3.3 1. ]\n",
+      " [5.6 2.7 4.2 1.3]\n",
+      " [5.7 3.  4.2 1.2]\n",
+      " [5.7 2.9 4.2 1.3]\n",
+      " [6.2 2.9 4.3 1.3]\n",
+      " [5.1 2.5 3.  1.1]\n",
+      " [5.7 2.8 4.1 1.3]\n",
+      " [6.3 3.3 6.  2.5]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [7.1 3.  5.9 2.1]\n",
+      " [6.3 2.9 5.6 1.8]\n",
+      " [6.5 3.  5.8 2.2]\n",
+      " [7.6 3.  6.6 2.1]\n",
+      " [4.9 2.5 4.5 1.7]\n",
+      " [7.3 2.9 6.3 1.8]\n",
+      " [6.7 2.5 5.8 1.8]\n",
+      " [7.2 3.6 6.1 2.5]\n",
+      " [6.5 3.2 5.1 2. ]\n",
+      " [6.4 2.7 5.3 1.9]\n",
+      " [6.8 3.  5.5 2.1]\n",
+      " [5.7 2.5 5.  2. ]\n",
+      " [5.8 2.8 5.1 2.4]\n",
+      " [6.4 3.2 5.3 2.3]\n",
+      " [6.5 3.  5.5 1.8]\n",
+      " [7.7 3.8 6.7 2.2]\n",
+      " [7.7 2.6 6.9 2.3]\n",
+      " [6.  2.2 5.  1.5]\n",
+      " [6.9 3.2 5.7 2.3]\n",
+      " [5.6 2.8 4.9 2. ]\n",
+      " [7.7 2.8 6.7 2. ]\n",
+      " [6.3 2.7 4.9 1.8]\n",
+      " [6.7 3.3 5.7 2.1]\n",
+      " [7.2 3.2 6.  1.8]\n",
+      " [6.2 2.8 4.8 1.8]\n",
+      " [6.1 3.  4.9 1.8]\n",
+      " [6.4 2.8 5.6 2.1]\n",
+      " [7.2 3.  5.8 1.6]\n",
+      " [7.4 2.8 6.1 1.9]\n",
+      " [7.9 3.8 6.4 2. ]\n",
+      " [6.4 2.8 5.6 2.2]\n",
+      " [6.3 2.8 5.1 1.5]\n",
+      " [6.1 2.6 5.6 1.4]\n",
+      " [7.7 3.  6.1 2.3]\n",
+      " [6.3 3.4 5.6 2.4]\n",
+      " [6.4 3.1 5.5 1.8]\n",
+      " [6.  3.  4.8 1.8]\n",
+      " [6.9 3.1 5.4 2.1]\n",
+      " [6.7 3.1 5.6 2.4]\n",
+      " [6.9 3.1 5.1 2.3]\n",
+      " [5.8 2.7 5.1 1.9]\n",
+      " [6.8 3.2 5.9 2.3]\n",
+      " [6.7 3.3 5.7 2.5]\n",
+      " [6.7 3.  5.2 2.3]\n",
+      " [6.3 2.5 5.  1.9]\n",
+      " [6.5 3.  5.2 2. ]\n",
+      " [6.2 3.4 5.4 2.3]\n",
+      " [5.9 3.  5.1 1.8]]\n"
+     ]
     }
    ],
    "source": [
@@ -22,12 +168,14 @@
     "iris_X, iris_y = datasets.load_iris(return_X_y=True)\n",
     "\n",
     "#retrun unique class labels\n",
-    "np.unique(iris_y)"
+    "np.unique(iris_y)\n",
+    "\n",
+    "print(iris_X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -43,6 +191,8 @@
     "# Split to train and test data, 140 train 10 test\n",
     "# Set seed ensures that the random operations (like permutation) produce the same result everytime\n",
     "# Random permutation from 0 to 150, len or iris_X\n",
+    "# Shuffled array of indices doesn’t modify original data\n",
+    "# It only provides a way to access the data in a different order\n",
     "np.random.seed(0)\n",
     "indices = np.random.permutation(len(iris_X))\n",
     "iris_X_train = iris_X[indices[:-10]]\n",
@@ -53,6 +203,7 @@
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "knn = KNeighborsClassifier()\n",
     "knn.fit(iris_X_train, iris_y_train)\n",
+    "\n",
     "print(knn.predict(iris_X_test))\n",
     "print(iris_y_test)"
    ]
