--- a/ago/regression.ipynb
+++ b/ago/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,16 +17,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[197.61898486 155.44031962 172.88875144 111.53270645 164.79397301\n",
+      " 131.06765869 259.12441219 100.47873746 117.06005372 124.30261597\n",
+      " 218.36868146  61.19581944 132.24837933 120.33293546  52.54513009\n",
+      " 194.03746764 102.5756431  123.56778709 211.03465323  52.60221696]\n",
+      "[233.  91. 111. 152. 120.  67. 310.  94. 183.  66. 173.  72.  49.  64.\n",
+      "  48. 178. 104. 132. 220.  57.]\n",
+      "not accurate\n",
       "[ 3.06094248e-01 -2.37635570e+02  5.10538048e+02  3.27729878e+02\n",
       " -8.14111926e+02  4.92799595e+02  1.02841240e+02  1.84603496e+02\n",
       "  7.43509388e+02  7.60966464e+01]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "regr = LinearRegression()\n",
+    "regr.fit(diabetes_X_train, diabetes_y_train)\n",
+    "\n",
+    "print(regr.predict(diabetes_X_test))\n",
+    "print(diabetes_y_test)\n",
+    "print(\"not accurate\")\n",
+    "\n",
+    "print(regr.coef_) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2004.5186863342092\n"
      ]
     },
     {
@@ -35,20 +67,16 @@
        "0.585085427447195"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.linear_model import LinearRegression\n",
-    "regr = LinearRegression()\n",
-    "regr.fit(diabetes_X_train, diabetes_y_train)\n",
-    "print(regr.coef_) \n",
-    "\n",
     "import numpy as np\n",
     "# The mean square error\n",
-    "np.mean((regr.predict(diabetes_X_test) - diabetes_y_test)**2)\n",
+    "mse = np.mean((regr.predict(diabetes_X_test) - diabetes_y_test)**2)\n",
+    "print(mse)\n",
     "\n",
     "# Explained variance score: 1 is perfect prediction\n",
     "# and 0 means that there is no linear relationship\n",
@@ -58,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
