--- a/learning_ml.ipynb
+++ b/learning_ml.ipynb
@@ -1,6 +1,35 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "DATA PREPROCESSING  \n",
+    "\n",
+    "1. Import the necessary libraries  \n",
+    "\n",
+    "2. Load the dataset  \n",
+    "```python\n",
+    "df = pd.read_csv(\"ago/USA_Housing.csv\")\n",
+    "print(df.head())\n",
+    "```\n",
+    "\n",
+    "3. View the data \n",
+    "```python\n",
+    "df.info()  \n",
+    "df.dtypes.value_counts()   \n",
+    "df.isnull().sum()   \n",
+    "```\n",
+    "\n",
+    "4. Statistical Analysis \n",
+    "```python  \n",
+    "df.desrcibe(include='all')  \n",
+    "```\n",
+    "\n",
+    "5.  Check for outliers\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -54,6 +83,296 @@
     "df = pd.read_csv(\"ago/USA_Housing.csv\")\n",
     "print(df.head())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 5000 entries, 0 to 4999\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column                        Non-Null Count  Dtype  \n",
+      "---  ------                        --------------  -----  \n",
+      " 0   Avg. Area Income              5000 non-null   float64\n",
+      " 1   Avg. Area House Age           5000 non-null   float64\n",
+      " 2   Avg. Area Number of Rooms     5000 non-null   float64\n",
+      " 3   Avg. Area Number of Bedrooms  5000 non-null   float64\n",
+      " 4   Area Population               5000 non-null   float64\n",
+      " 5   Price                         5000 non-null   float64\n",
+      " 6   Address                       5000 non-null   object \n",
+      "dtypes: float64(6), object(1)\n",
+      "memory usage: 273.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check the data info\n",
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float64    6\n",
+       "object     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the data types\n",
+    "df.dtypes.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Avg. Area Income                0\n",
+       "Avg. Area House Age             0\n",
+       "Avg. Area Number of Rooms       0\n",
+       "Avg. Area Number of Bedrooms    0\n",
+       "Area Population                 0\n",
+       "Price                           0\n",
+       "Address                         0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the null values\n",
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Avg. Area Income</th>\n",
+       "      <th>Avg. Area House Age</th>\n",
+       "      <th>Avg. Area Number of Rooms</th>\n",
+       "      <th>Avg. Area Number of Bedrooms</th>\n",
+       "      <th>Area Population</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Address</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5000.000000</td>\n",
+       "      <td>5.000000e+03</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>208 Michael Ferry Apt. 674\\nLaurabury, NE 3701...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>68583.108984</td>\n",
+       "      <td>5.977222</td>\n",
+       "      <td>6.987792</td>\n",
+       "      <td>3.981330</td>\n",
+       "      <td>36163.516039</td>\n",
+       "      <td>1.232073e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>10657.991214</td>\n",
+       "      <td>0.991456</td>\n",
+       "      <td>1.005833</td>\n",
+       "      <td>1.234137</td>\n",
+       "      <td>9925.650114</td>\n",
+       "      <td>3.531176e+05</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>17796.631190</td>\n",
+       "      <td>2.644304</td>\n",
+       "      <td>3.236194</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>172.610686</td>\n",
+       "      <td>1.593866e+04</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>61480.562388</td>\n",
+       "      <td>5.322283</td>\n",
+       "      <td>6.299250</td>\n",
+       "      <td>3.140000</td>\n",
+       "      <td>29403.928702</td>\n",
+       "      <td>9.975771e+05</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>68804.286404</td>\n",
+       "      <td>5.970429</td>\n",
+       "      <td>7.002902</td>\n",
+       "      <td>4.050000</td>\n",
+       "      <td>36199.406689</td>\n",
+       "      <td>1.232669e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>75783.338666</td>\n",
+       "      <td>6.650808</td>\n",
+       "      <td>7.665871</td>\n",
+       "      <td>4.490000</td>\n",
+       "      <td>42861.290769</td>\n",
+       "      <td>1.471210e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>107701.748378</td>\n",
+       "      <td>9.519088</td>\n",
+       "      <td>10.759588</td>\n",
+       "      <td>6.500000</td>\n",
+       "      <td>69621.713378</td>\n",
+       "      <td>2.469066e+06</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Avg. Area Income  Avg. Area House Age  Avg. Area Number of Rooms  \\\n",
+       "count        5000.000000          5000.000000                5000.000000   \n",
+       "unique               NaN                  NaN                        NaN   \n",
+       "top                  NaN                  NaN                        NaN   \n",
+       "freq                 NaN                  NaN                        NaN   \n",
+       "mean        68583.108984             5.977222                   6.987792   \n",
+       "std         10657.991214             0.991456                   1.005833   \n",
+       "min         17796.631190             2.644304                   3.236194   \n",
+       "25%         61480.562388             5.322283                   6.299250   \n",
+       "50%         68804.286404             5.970429                   7.002902   \n",
+       "75%         75783.338666             6.650808                   7.665871   \n",
+       "max        107701.748378             9.519088                  10.759588   \n",
+       "\n",
+       "        Avg. Area Number of Bedrooms  Area Population         Price  \\\n",
+       "count                    5000.000000      5000.000000  5.000000e+03   \n",
+       "unique                           NaN              NaN           NaN   \n",
+       "top                              NaN              NaN           NaN   \n",
+       "freq                             NaN              NaN           NaN   \n",
+       "mean                        3.981330     36163.516039  1.232073e+06   \n",
+       "std                         1.234137      9925.650114  3.531176e+05   \n",
+       "min                         2.000000       172.610686  1.593866e+04   \n",
+       "25%                         3.140000     29403.928702  9.975771e+05   \n",
+       "50%                         4.050000     36199.406689  1.232669e+06   \n",
+       "75%                         4.490000     42861.290769  1.471210e+06   \n",
+       "max                         6.500000     69621.713378  2.469066e+06   \n",
+       "\n",
+       "                                                  Address  \n",
+       "count                                                5000  \n",
+       "unique                                               5000  \n",
+       "top     208 Michael Ferry Apt. 674\\nLaurabury, NE 3701...  \n",
+       "freq                                                    1  \n",
+       "mean                                                  NaN  \n",
+       "std                                                   NaN  \n",
+       "min                                                   NaN  \n",
+       "25%                                                   NaN  \n",
+       "50%                                                   NaN  \n",
+       "75%                                                   NaN  \n",
+       "max                                                   NaN  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3. Statistical Analysis\n",
+    "df.describe(include='all')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
