--- a/learning_ml.ipynb
+++ b/learning_ml.ipynb
@@ -14,24 +14,28 @@
     "print(df.head())\n",
     "```\n",
     "\n",
-    "3. View the data \n",
+    "View the data \n",
     "```python\n",
     "df.info()  \n",
     "df.dtypes.value_counts()   \n",
     "df.isnull().sum()   \n",
     "```\n",
     "\n",
-    "4. Statistical Analysis \n",
+    "3. Statistical Analysis \n",
     "```python  \n",
-    "df.desrcibe(include='all')  \n",
+    "df.desrcibe(include='all') \n",
+    " \n",
+    "# New df with only numeric features\n",
+    "numeric_df = df.select_dtypes(include=[int, float])\n",
     "```\n",
     "\n",
-    "5.  Check for outliers\n"
+    "4.  Check the outliers\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +132,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +160,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +361,7 @@
        "max                                                   NaN  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,10 +373,140 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Avg. Area Income</th>\n",
+       "      <th>Avg. Area House Age</th>\n",
+       "      <th>Avg. Area Number of Rooms</th>\n",
+       "      <th>Avg. Area Number of Bedrooms</th>\n",
+       "      <th>Area Population</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>79545.458574</td>\n",
+       "      <td>5.682861</td>\n",
+       "      <td>7.009188</td>\n",
+       "      <td>4.09</td>\n",
+       "      <td>23086.800503</td>\n",
+       "      <td>1.059034e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>79248.642455</td>\n",
+       "      <td>6.002900</td>\n",
+       "      <td>6.730821</td>\n",
+       "      <td>3.09</td>\n",
+       "      <td>40173.072174</td>\n",
+       "      <td>1.505891e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>61287.067179</td>\n",
+       "      <td>5.865890</td>\n",
+       "      <td>8.512727</td>\n",
+       "      <td>5.13</td>\n",
+       "      <td>36882.159400</td>\n",
+       "      <td>1.058988e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>63345.240046</td>\n",
+       "      <td>7.188236</td>\n",
+       "      <td>5.586729</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>34310.242831</td>\n",
+       "      <td>1.260617e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>59982.197226</td>\n",
+       "      <td>5.040555</td>\n",
+       "      <td>7.839388</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>26354.109472</td>\n",
+       "      <td>6.309435e+05</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Avg. Area Income  Avg. Area House Age  Avg. Area Number of Rooms  \\\n",
+       "0      79545.458574             5.682861                   7.009188   \n",
+       "1      79248.642455             6.002900                   6.730821   \n",
+       "2      61287.067179             5.865890                   8.512727   \n",
+       "3      63345.240046             7.188236                   5.586729   \n",
+       "4      59982.197226             5.040555                   7.839388   \n",
+       "\n",
+       "   Avg. Area Number of Bedrooms  Area Population         Price  \n",
+       "0                          4.09     23086.800503  1.059034e+06  \n",
+       "1                          3.09     40173.072174  1.505891e+06  \n",
+       "2                          5.13     36882.159400  1.058988e+06  \n",
+       "3                          3.26     34310.242831  1.260617e+06  \n",
+       "4                          4.23     26354.109472  6.309435e+05  "
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Select only numeric columns (by default, includes int64 and float64)\n",
+    "numeric_df = df.select_dtypes(include=[int, float])\n",
+    "numeric_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Determine number of columns and set dynamic number of subplots\n",
+    "num_cols = len(numeric_df)\n",
+    "\n",
+    "# Create a subplot with num_cols rows and 1 column\n",
+    "fig, axs = plt.subplots(num_cols, 1, dpi=95)\n",
+    "\n",
+    "# If there's only one column, wrap axs in a list\n",
+    "if num_cols == 1:\n",
+    "    axs = [axs]\n",
+    "\n",
+    "# Loop through the columns and create box plots\n",
+    "i = 0\n",
+    "for col in numeric_df:\n",
+    "    axs[i].boxplot(df[col], vert=False)  # Create horizontal box plot\n",
+    "    axs[i].set_ylabel(col)               # Label each plot with column name\n",
+    "    i += 1\n",
+    "\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
