--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,12 +55,12 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import MinMaxScaler"
+    "from sklearn.preprocessing import MinMaxScaler, StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "max                                                   NaN  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "4                          4.23     26354.109472  6.309435e+05  "
       ]
      },
-     "execution_count": 113,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "Name: Avg. Area House Age, dtype: float64"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -738,7 +738,7 @@
        "       [0.34825968, 0.32041599, 0.65483005, 0.49555556, 0.31539832]])"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -755,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -768,19 +768,24 @@
        "       [-0.84114161, -0.97035973,  0.86638652,  0.19889389, -1.01465702]])"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Standardization\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "\n",
     "scaler = StandardScaler().fit(X_train_numeric)\n",
     "std_scaledX_train_num = scaler.transform(X_train_numeric)\n",
     "std_scaledX_train_num[:5]\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
