--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -19,12 +19,17 @@
     "df.info()  \n",
     "df.dtypes.value_counts()   \n",
     "df.isnull().sum()   \n",
+    "df.duplicated().sum()\n",
     "```\n",
     "\n",
     "3. Statistical Analysis \n",
     "```python  \n",
     "df.desrcibe(include='all') \n",
-    " \n",
+    "```  \n",
+    "\n",
+    "Create cat col and num col   \n",
+    "Clean the data(**look at data_cleaning.ipynb**) \n",
+    "```python\n",
     "# New df with only numeric features\n",
     "numeric_df = df.select_dtypes(include=[int, float])\n",
     "```\n",
@@ -176,6 +181,27 @@
    "source": [
     "# Check the null values\n",
     "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check for duplicates\n",
+    "df.duplicated().sum()"
    ]
   },
   {
