finish data cleaning

--- a/data_cleaning.ipynb
+++ b/data_cleaning.ipynb
@@ -4,15 +4,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Import libraries and load dataset\n",
-    "2. View Data info  \n",
-    "3. Cat col and Num Col  \n",
-    "4. "
+    "1. Import libraries and load dataset  \n",
+    "2. View Data info and Check Duplicates\n",
+    "3. Cat col and Num Col   \n",
+    "4. Deal with cat features    \n",
+    "   Check nunique in each col()  \n",
+    "   Can drop cat features like name as each is unique  \n",
+    "5. Handle Missing Data  \n",
+    "   Get %age of missing values in each col  \n",
+    "   Drop the column with highest perecentage  \n",
+    "   Drop the null values of column with very low percentage  \n",
+    "   ```python\n",
+    "   df2 = df1.drop(columns='Cabin')\n",
+    "   df2.dropna(subset=['Embarked'], axis=0, inplace=True)\n",
+    "   df2.shape\n",
+    "   ```\n",
+    "6. Handle outliers(**data_preprocessing.ipynb**)  \n",
+    "7. Data transformation  \n",
+    "   Separate X and y  \n",
+    "   Normalization and Standardization     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -92,22 +107,127 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Avg. Area Income                0\n",
+      "Avg. Area House Age             0\n",
+      "Avg. Area Number of Rooms       0\n",
+      "Avg. Area Number of Bedrooms    0\n",
+      "Area Population                 0\n",
+      "Price                           0\n",
+      "Address                         0\n",
+      "dtype: int64\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isnull().sum())\n",
+    "print(df.duplicated().sum())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Categorical columns : ['Address']\n",
+      "Numerical columns : ['Avg. Area Income', 'Avg. Area House Age', 'Avg. Area Number of Rooms', 'Avg. Area Number of Bedrooms', 'Area Population', 'Price']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Categorical columns\n",
+    "cat_col = [col for col in df.columns if df[col].dtype == 'object']\n",
+    "print('Categorical columns :',cat_col)\n",
+    "# Numerical columns\n",
+    "num_col = [col for col in df.columns if df[col].dtype != 'object']\n",
+    "print('Numerical columns :',num_col)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "Avg. Area Income                5000\n",
+       "Avg. Area House Age             5000\n",
+       "Avg. Area Number of Rooms       5000\n",
+       "Avg. Area Number of Bedrooms     255\n",
+       "Area Population                 5000\n",
+       "Price                           5000\n",
+       "Address                         5000\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.duplicated().sum()"
+    "df[df.columns].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5000, 6)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1 = df.drop(columns=['Address'])\n",
+    "df1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Avg. Area Income                0.0\n",
+       "Avg. Area House Age             0.0\n",
+       "Avg. Area Number of Rooms       0.0\n",
+       "Avg. Area Number of Bedrooms    0.0\n",
+       "Area Population                 0.0\n",
+       "Price                           0.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# no of null/no of rows then convert to %page\n",
+    "# round to 2dp\n",
+    "round((df1.isnull().sum()/df1.shape[0])*100,2)\n"
    ]
   }
  ],
