--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -43,7 +43,8 @@
     "-1 shows perfect negative corr, if one inc, the other dec  \n",
     "0 shows weak corr, one cannnot be used to predict another  \n",
     "\n",
-    "7. Separate independet features X and target variables y  "
+    "7. Separate independet features X and target variables y  \n",
+    "8. Standardization and Normalization  "
    ]
   },
   {
@@ -681,7 +682,9 @@
     "    axs[i].set_ylabel(col)               # Label each plot with column name\n",
     "    i += 1\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "#notice the outliers have greatly reduced"
    ]
   },
   {
