--- a/data_preprocessing.ipynb
+++ b/data_preprocessing.ipynb
@@ -16,6 +16,7 @@
     "\n",
     "View the data \n",
     "```python\n",
+    "df.shape\n",
     "df.info()  \n",
     "df.dtypes.value_counts()   \n",
     "df.isnull().sum()   \n",
@@ -95,6 +96,26 @@
     "# 2. Load the dataset\n",
     "df = pd.read_csv(\"ago/USA_Housing.csv\")\n",
     "print(df.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mFailed to start the Kernel. \n",
+      "\u001b[1;31mUnable to start Kernel 'Python 3.12.3' due to a timeout waiting for the ports to get used. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "df.shape"
    ]
   },
   {
