--- a/supervised_learning/classification.ipynb
+++ b/supervised_learning/classification.ipynb
@@ -24,14 +24,30 @@
     "##### CONFUSION MATRIX\n",
     "+ Accuracy  \n",
     "`TP+TN / TP+TN+FP+FN`  \n",
+    "\n",
     "+ Precision  \n",
     "`TP / TP+FP`  \n",
     "TP divide by total no of positives.  \n",
     "How accurate +ve predictions are.  \n",
+    "Used to minimize **FP**  \n",
+    "Eg classify non spam as spam.  \n",
+    "\n",
     "+ Recall  \n",
     "`TP / TP+FN`  \n",
     "TP divide by the real/accurate positives.  \n",
-    "How accurate to get +ve out of the real +ves.  "
+    "How it correctly identifies positive cases.  \n",
+    "Used to minimize **FN**  \n",
+    "Eg medical, must get all positives even if it will have FP as well.  \n",
+    "\n",
+    "+ F1-Score  \n",
+    "`2*P*R / P+R`  \n",
+    "Harmonic mean of precison and recall.  \n",
+    "\n",
+    "+ Specificity  \n",
+    "`TN / TN+FP`  \n",
+    "TN divide by the real/accirate negatives.  \n",
+    "How it correctly identifies negative cases.  \n",
+    "\n"
    ]
   }
  ],
