--- a/supervised_learning/classification.ipynb
+++ b/supervised_learning/classification.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "+ Precision  \n",
     "`TP / TP+FP`  \n",
-    "TP divide by total no of positives.  \n",
-    "How accurate +ve predictions are.  \n",
+    "TP divide by total no of predicted positives.  \n",
+    "Of predicted +ve what %age is truly +ve.  \n",
     "Used to minimize **FP**  \n",
     "Eg classify non spam as spam.  \n",
     "\n",
@@ -47,15 +47,19 @@
     "Used to minimize **FN**  \n",
     "Eg medical, must get all positives even if it will have FP as well.  \n",
     "\n",
-    "+ F1-Score  \n",
-    "`2*P*R / P+R`  \n",
-    "Harmonic mean of precison and recall.  \n",
-    "\n",
     "+ Specificity/TNR  \n",
     "`TN / TN+FP`  \n",
-    "TN divide by the real/accirate negatives.  \n",
+    "TN divide by the real/accurate negatives.  \n",
     "How it correctly identifies negative cases.  \n",
-    "\n"
+    "\n",
+    "+ FPR  \n",
+    "`FP / FP+TN`  \n",
+    "FP divide by real/accurate negatives.  \n",
+    "`1 - Specificity/TNR`  \n",
+    "\n",
+    "+ F1-Score  \n",
+    "`2*P*R / P+R`  \n",
+    "Harmonic mean of precison and recall.  \n"
    ]
   },
   {
@@ -178,6 +182,11 @@
     "auc = np.round(roc_auc_score(y_true, y_pred), 3)\n",
     "print(\"Auc: {}\".format(auc))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
