--- a/supervised_learning/classification.ipynb
+++ b/supervised_learning/classification.ipynb
@@ -14,7 +14,8 @@
    "metadata": {},
    "source": [
     "##### ACCURACY\n",
-    "Accuracy= `No of correct predictions/Total no of inputs`   \n"
+    "No of correct predictions/Total no of inputs   \n",
+    "`TP+TN / TP+TN+FP+FN`  "
    ]
   },
   {
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +187,101 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "##### CROSS-VALIDATION  \n",
+    "This is a technique of dividing the available data into multiple subsets or folds.   \n",
+    "One of the folds is used as test set and the other as training set.  \n",
+    "This is done severally each time using different folds as test set.  \n",
+    "The results of each process from test set are averaged.  \n",
+    "It helps ensure that the model generalizes well to unseen data.  \n",
+    "Thus prevents **overfitting**.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### HOLDOUT VALIDATION  \n",
+    "Separate the data into two sets, Training and Test Sets.  \n",
+    "The training set is usally larger than the test set.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### STRATIFIED K-FOLD CROSS-VALIDATION\n",
+    "Preferred compared to random sapmling.  \n",
+    "If population has 700 boys and 300 girls;  \n",
+    "In stratified sampling, data is splitted ensuring the proportion of boys is 70% and of girls is 30%.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of possible accuracy: [0.9298245614035088, 0.9649122807017544, 0.9824561403508771, 1.0, 0.9649122807017544, 0.9649122807017544, 0.9824561403508771, 0.9473684210526315, 0.9473684210526315, 0.9821428571428571]\n",
+      "\n",
+      "Maximum Accuracy: 100.0 %\n",
+      "\n",
+      "Minimum Accuracy: 92.98245614035088 %\n",
+      "\n",
+      "Overall Accuracy: 96.66353383458647 %\n",
+      "\n",
+      "Standard Deviation: 0.02097789213195869\n"
+     ]
+    }
+   ],
+   "source": [
+    "from statistics import mean, stdev\n",
+    "from sklearn import preprocessing\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn import linear_model\n",
+    "from sklearn import datasets\n",
+    "\n",
+    "cancer = datasets.load_breast_cancer()\n",
+    "\n",
+    "x = cancer.data\t\t\t\t\t\t \n",
+    "y = cancer.target\t\t\t\t\t \n",
+    "\n",
+    "# Feature Scaling for input features.\n",
+    "scaler = preprocessing.MinMaxScaler()\n",
+    "x_scaled = scaler.fit_transform(x)\n",
+    "\n",
+    "# Create model\n",
+    "lr = linear_model.LogisticRegression()\n",
+    "\n",
+    "# Create StratifiedKFold object\n",
+    "# Splits data to 10 folds\n",
+    "# Shuffles data before splitting to ensure folds are randomized\n",
+    "skf = StratifiedKFold(n_splits=10, shuffle=True, random_state=1)\n",
+    "\n",
+    "# A list to store the accuracy for each fold.\n",
+    "lst_accu_stratified = []\n",
+    "\n",
+    "# train_index is the training data for a specific fold\n",
+    "for train_index, test_index in skf.split(x, y): \n",
+    "\tx_train_fold, x_test_fold = x_scaled[train_index], x_scaled[test_index]\n",
+    "\ty_train_fold, y_test_fold = y[train_index], y[test_index]\n",
+    "\tlr.fit(x_train_fold, y_train_fold)\n",
+    "\tlst_accu_stratified.append(lr.score(x_test_fold, y_test_fold))\n",
+    "\n",
+    "# Print the output.\n",
+    "print('List of possible accuracy:', lst_accu_stratified)\n",
+    "print('\\nMaximum Accuracy:',\n",
+    "\tmax(lst_accu_stratified)*100, '%')\n",
+    "print('\\nMinimum Accuracy:',\n",
+    "\tmin(lst_accu_stratified)*100, '%')\n",
+    "print('\\nOverall Accuracy:',\n",
+    "\tmean(lst_accu_stratified)*100, '%')\n",
+    "print('\\nStandard Deviation:',\n",
+    "\tstdev(lst_accu_stratified))\n"
+   ]
   }
  ],
  "metadata": {
