--- a/supervised_learning/classification.ipynb
+++ b/supervised_learning/classification.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -210,6 +210,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### K FOLD CROSS-VALIDATION  \n",
+    "The data is plit into K folds.  \n",
+    "Training is done on all folds except K-1.  \n",
+    "This is repeated K times, so that each fold acts as testing set.  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Results (Accuracy): [1.         1.         1.         1.         1.         0.93333333\n",
+      " 0.86666667 1.         1.         0.93333333]\n",
+      "Mean Accuracy: 0.9733333333333334\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import cross_val_score, KFold\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.datasets import load_iris\n",
+    "\n",
+    "iris = load_iris()\n",
+    "X, y = iris.data, iris.target\n",
+    "\n",
+    "# Initialise the model\n",
+    "svm_classifier = SVC(kernel='linear')\n",
+    "\n",
+    "# Create KFold object\n",
+    "kf = KFold(n_splits=10, shuffle=True, random_state=42)\n",
+    "\n",
+    "# Cross Validation\n",
+    "cross_val_results = cross_val_score(svm_classifier, X, y, cv=kf)\n",
+    "\n",
+    "# Print results\n",
+    "print(f'Cross-Validation Results (Accuracy): {cross_val_results}')\n",
+    "print(f'Mean Accuracy: {cross_val_results.mean()}')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### STRATIFIED K-FOLD CROSS-VALIDATION\n",
     "Preferred compared to random sapmling.  \n",
     "If population has 700 boys and 300 girls;  \n",
@@ -218,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -246,8 +293,8 @@
     "\n",
     "cancer = datasets.load_breast_cancer()\n",
     "\n",
-    "x = cancer.data\t\t\t\t\t\t \n",
-    "y = cancer.target\t\t\t\t\t \n",
+    "x =cancer.data\t\t\t\t\t\t \n",
+    "y =cancer.target\t\t\t\t\t \n",
     "\n",
     "# Feature Scaling for input features.\n",
     "scaler = preprocessing.MinMaxScaler()\n",
